# msckf_stereo_c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: run_euroc_muitl_threads.cpp  run_euroc_nothread.cpp  run_euroc_single_thread.cpp
config/: app_imgproc.yaml  app_msckfvio.yaml
glwindow/: scenewindow.cpp
include/: common.h  config_io.h  feature.hpp  image_processor.h  imu_state.h  math_utils.hpp  msckf_vio.h  system.h
include/common/: cam_state.h  config_io.h  data_msg.h  imu_state.h
include/utils/: config_io.h
math_utils/: CMakeLists.txt
math_utils/include/math_utils/: math_utils.hpp
math_utils/src/: matrix.cpp  random_numbers.cpp
math_utils/test/: CMakeLists.txt  test_math.cpp
msckf_core/: CMakeLists.txt
msckf_core/include/: feature.hpp  image_processor.h  msckf_vio.h  system.h
msckf_core/include/common/: cam_state.h  config_io.h  data_msg.h  imu_state.h
msckf_core/src/: image_processor.cpp  msckf_vio.cpp  system.cpp
msckf_core/test/: test_yaml.cpp
src/: image_processor.cpp  msckf_vio.cpp  random_numbers.cpp  system.cpp
src/apps/: run_euroc.cpp  run_euroc_nothread.cpp
test/: CMakeLists.txt  test_yaml.cpp
